2003-10-18  Niklas Knutsson  <nq@altern.org>

	* Do not delete selection on sqrt button clicked but act as with the other functions
	* Make answer variables a special case which cannot be edited and does not display result in variable dialog
	* Change "first"/"second" axis to "primary"/"secondary"
	* Put axis after smooth
	* Fix rms(), stdev(), stdevp()
	* Fix error in setFunctionsAndVariables that stopped unknown variables after something was set
	* Remove CVS version title
	* Write something in AUTHORS and NEWS
	* Hidden property in function and unit edit dialogs
	* Hide some annoying composite units (m/m and m2/m2)
	* Hide hidden items in menus
	* New hidden property for ExpressionItem (meant for some composite units and sub functions)

2003-10-17  Niklas Knutsson  <nq@altern.org>

	* Finally implement angle units and allow direct specification of angle unit in trigonometric functions
	* rem and rad units renamed to rem_radioactivity and rad_radioactivity
	* Some swedish translation updates
	* Some tooltip updates
	* Some TODO updates
	* Fill in the last argument titles and add some descriptions
	* Set min arguments to zero if lower (and max to -1)
	* Argument names and descriptions for matrix and vector functions
	* Rename title "Power" with "X raised to Y" to solve translation conflict with the category "Power"
	* Fix 0^0 warning

2003-10-16  Niklas Knutsson  <nq@altern.org>

	* If add argument button is not sensitive, modify argument instead on enter
	* Fix arguments for process()
	* Titles for functions and arguments in utilities category
	* Put buttons in first tab
	* Default to show buttons
	* Remove quotes from default values in insert function dialog
	* Matrix multiplication error message
	* Better error message for misplaced operators
	* Updated swedish translation
	* More argument names
	* Fix category selection after editing
	* Argument names for all geometry functions
	* Do not use "free" for argument == NULL but printlong() of default argument
